--- a/index.html
+++ b/index.html
@@ -17,80 +17,82 @@
   </head>
   <body class="container">
     <header class="header">
-      <h1 class="header__title">10,000+ of our users love our products.</h1>
-      <p class="header__about">We only provide great products combined with excellent custom service. See what our satisfied customers are saying about our services.</p>
-      
-      <div class="card-group">
-        <div class="rating base-card">
-          <span class="five-star-rating">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-          </span>
-          <p>Rated 5 Stars in Reviews</p>
+      <div class="heading-txt">
+        <h1 class="header-title">10,000+ of our users love our products.</h1>
+        <p class="header-about">We only provide great products combined with excellent custom service. See what our satisfied customers are saying about our services.</p> 
+      </div>
+
+      <div class="card-container">
+        <div class="rating-cards">
+          <div class="rating base-card">
+            <span class="five-star-rating">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+            </span>
+            <p>Rated 5 Stars in Reviews</p>
+          </div>
+  
+          <div class="rating base-card">
+            <span class="five-star-rating">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+            </span>
+            <p>Rated 5 Stars in Report Guru</p>
+          </div>
+
+          <div class="rating base-card">
+            <span class="five-star-rating">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+              <img src="imgs/icon-star.svg" alt="Star Icon">
+            </span>
+            <p>Rated 5 Stars in BestTech</p>
+          </div>  
         </div>
 
-        <div class="rating base-card">
-          <span class="five-star-rating">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-          </span>
-          <p>Rated 5 Stars in Report Guru</p>
-        </div>
+        <div class="review-cards">
+          <div class="review base-card">
+            <div class="flex-group">
+              <img class="review-pfp" src="imgs/image-colton.jpg" alt="Profile Picture">
+              <div>
+                <p>Colton Smith</p>
+                <p class="review-tag">Verified Buyer</p> 
+              </div> 
+            </div>
+            <p>" We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also recieved in time. Excellent! "</p>
+          </div>
 
-        <div class="rating base-card">
-          <span class="five-star-rating">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-            <img src="imgs/icon-star.svg" alt="Star Icon">
-          </span>
-          <p>Rated 5 Stars in BestTech</p>
+          <div class="review base-card">
+            <div class="flex-group">
+              <img class="review-pfp" src="imgs/image-irene.jpg" alt="Profile Picture">
+              <div>
+                <p>Irene Roberts</p>
+                <p class="review-tag">Verified Buyer</p>  
+              </div>  
+            </div>
+            <p>" Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery. "</p>
+          </div>
+  
+          <div class="review base-card">
+            <div class="flex-group">
+              <img class="review-pfp" src="imgs/image-anne.jpg" alt="Profile Picture">
+              <div>
+                <p>Anne Wallace</p>
+                <p class="review-tag">Verified Buyer</p>  
+              </div>  
+            </div>
+            <p>" Put an order with this company and can only praise them for the very high standard. Will definitely use tehm again and recommend them to everyone! "</p>
+          </div>  
         </div>
       </div>
     </header>
-
-    <main>
-      <div class="card-group">
-        <div class="review base-card">
-          <div class="flex-group">
-            <img class="review-pfp" src="imgs/image-colton.jpg" alt="Profile Picture">
-            <div>
-              <p>Colton Smith</p>
-              <p class="review-tag">Verified Buyer</p> 
-            </div> 
-          </div>
-          <p>" We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also recieved in time. Excellent! "</p>
-        </div>
-
-        <div class="review base-card">
-          <div class="flex-group">
-            <img class="review-pfp" src="imgs/image-irene.jpg" alt="Profile Picture">
-            <div>
-              <p>Irene Roberts</p>
-              <p class="review-tag">Verified Buyer</p>  
-            </div>  
-          </div>
-          <p>" Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery. "</p>
-        </div>
-
-        <div class="review base-card">
-          <div class="flex-group">
-            <img class="review-pfp" src="imgs/image-anne.jpg" alt="Profile Picture">
-            <div>
-              <p>Anne Wallace</p>
-              <p class="review-tag">Verified Buyer</p>  
-            </div>  
-          </div>
-          <p>" Put an order with this company and can only praise them for the very high standard. Will definitely use tehm again and recommend them to everyone! "</p>
-        </div>
-      </div>
-    </main>
   </body>
 </html>
