--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles.css">
     </style>
   </head>
-  <body>
+  <body class="main-container">
     <main class="container">
       <div class="header">
         <h1 class="header-title">10,000+ of our users love our products.</h1>
